fix(components): fix gap for grid

--- a/components/s_catalog/s_catalog.scss
+++ b/components/s_catalog/s_catalog.scss
@@ -39,6 +39,7 @@
   }
 
   &__filters {
+    grid-column: 1 / -1;
     display: flex;
     justify-content: space-between;
     align-items: center;
